--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 <script src="scripts/tetrominoes.js"></script>
 <script src="scripts/tetrominoes-rotations.js"></script>
 <script src="scripts/tests.js"></script>
+<script src="scripts/gameloop.js"></script>
+
 
 </body>
 </html>
